src/objects/Case_Contact_Role__c.object
<CustomObject>
    <description>Custom object for contact role on case, required to bring in Authorized Signer data</description>
    <fields>
        <fullName>Authorized_Signer__c</fullName>
        <formula>INCLUDES(Role__c, &apos;Authorized Signer&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorized Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;&amp;Contact__c, Contact__r.Contact_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AML Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member/ Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Related Contact</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>